# partisia-workshop

./: .gitignore  Cargo.toml  Justfile  README.md
defi-common/: Cargo.toml  README.md
defi-common/src/: deploy.rs  interact_mpc20.rs  interact_swap.rs  interact_swap_lock_partial.rs  lib.rs  liquidity_util.rs  math.rs  permission.rs  token_balances.rs
liquidity-swap/: Cargo.toml  README.md
liquidity-swap-lock/: Cargo.toml  README.md
liquidity-swap-lock/src/: lib.rs  tests.rs
petition/: README.md
petition/src/: lib.rs
ping/: Cargo.toml  README.md
ping/src/: lib.rs
token/: Cargo.toml
token-v2/: Cargo.toml
token-v2/src/: lib.rs
token/src/: lib.rs
voting/: Cargo.toml  README.md
voting/src/: lib.rs
