[workspace]
members = [ "defi-common", "liquidity-swap", "liquidity-swap-lock","petition", "ping", "token", "token-v2", "voting"]
resolver = "2"

[workspace.package]
description = "Example contract for the Partisia Blockchain."
documentation = "https://github.com/Akagi201/partisia-workshop"
edition = "2021"
homepage = "https://github.com/Akagi201/partisia-workshop"
license = "Apache-2.0"
repository = "https://github.com/Akagi201/partisia-workshop"
version = "0.1.1"

[workspace.metadata.partisiablockchain]
cargo-partisia = "4.104.0"

[workspace.metadata.zkcompiler]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/zkcompiler/4.102.0/zkcompiler-4.102.0-jar-with-dependencies.jar"

[workspace.metadata.abi-cli]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/abi-cli/4.128.0/abi-cli-4.128.0-jar-with-dependencies.jar"

[workspace.dependencies]
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.50.0" }
